tests-system/tuples-10/output
a T
^ tuples-10/foo.rsl:10: error: tuple type Q, which contains separators, may not contain another tuple with separators
x Q
  ^ tuples-10/foo.rsl:16: error: unknown symbol Q
x = 1 @ 2 @ 3 @ 4
^ tuples-10/foo.trlc:4: error: unknown symbol x
x = 1 @ 2 @ 3
^ tuples-10/foo.trlc:8: error: unknown symbol x
x = 1 @ 2
^ tuples-10/foo.trlc:12: error: unknown symbol x
x = 1
^ tuples-10/foo.trlc:16: error: unknown symbol x
Processed 1 model(s), 0 check(s) and 1 requirement file(s) and found 6 error(s)
